--- a/index.html
+++ b/index.html
@@ -7,5 +7,19 @@
 </head>
 <body>
     <h1>Hello!</h1>
+    <h2>Blog</h2>
+    <p>This site will contain my writing and projects relating to my various interests: drawing, animation, physics, 
+        math, programming, etc. I hope to write up a post every day. Please mind the formatting, I have yet to decide on 
+        a hugo template I want to implement.
+    </p>
+
+    <h2>11/8/24: Learning C++ by making a physics engine</h2>
+
+
+    <h2>Projects</h2>
+    <h3>Acoustic Pressure physics engine</h3>
+
+    <h2>Book Reviews</h2>
+
 </body>
 </html>
