--- a/index.html
+++ b/index.html
@@ -18,8 +18,17 @@
 
     <h2>Projects</h2>
     <h3>Acoustic Pressure physics engine</h3>
+    <h3></h3>
 
     <h2>Book Reviews</h2>
+    <h3>Landau: Mechanics</h3>
+    <p>I am starting my quest to complete Landau's "theoretical minimum" in the hopes of making sure I have sufficient breadth of knowlege to
+        start physics research and start applying to grad schools. I plan to go through this book rather quickly (~3 weeks) as I have a good grasp
+        of mechanics, but I wish to be thorough (that is, do every problem in the book).
+    </p>
+
+    <h2>Thoughts</h2>
+    <h3>Innovation Culture</h3>
 
 </body>
 </html>
