--- a/index.html
+++ b/index.html
@@ -13,11 +13,19 @@
         a hugo template I want to implement.
     </p>
 
-    <h2>11/8/24: Learning C++ by making a physics engine</h2>
+    <h3>11/8/24: Learning C++ by making a physics engine</h2>
+    <p></p>
+
+    <h3>11/8/25:Easy desktop applications with Wails + Go + Vue</h3>
+    <p>Wails is a super easy and well documented way to make desktop GUIs with Go. You can pick several front-end frameworks, but I chose 
+        <a href="https://vuejs.org/">Vue</a>, because that is the JS framework I chose to stick with.
+    </p>
 
 
-    <h2>Projects</h2>
+    <h3>Projects</h3>
     <h3>Acoustic Pressure physics engine</h3>
+    <h3>MEEP simulations - evolutionary antenna design</h3>
+
     <h3></h3>
 
     <h2>Book Reviews</h2>
