--- a/index.html
+++ b/index.html
@@ -17,9 +17,11 @@
     <p></p>
 
     <h3>11/8/25:Easy desktop applications with Wails + Go + Vue</h3>
-    <p>Wails is a super easy and well documented way to make desktop GUIs with Go. You can pick several front-end frameworks, but I chose 
-        <a href="https://vuejs.org/">Vue</a>, because that is the JS framework I chose to stick with.
+    <p><a href="https://wails.io/">Wails</a> is a super easy and well documented way to make desktop GUIs with Go. You can pick several front-end frameworks, but I chose 
+        <a href="https://vuejs.org/">Vue</a>, because that is the JS framework I bothered to learn.
     </p>
+
+    <h3>Geometric Langlands + Monstrous Moonshine</h3>
 
 
     <h3>Projects</h3>
@@ -31,12 +33,14 @@
     <h2>Book Reviews</h2>
     <h3>Landau: Mechanics</h3>
     <p>I am starting my quest to complete Landau's "theoretical minimum" in the hopes of making sure I have sufficient breadth of knowlege to
-        start physics research and start applying to grad schools. I plan to go through this book rather quickly (~3 weeks) as I have a good grasp
+        start physics research and start applying to grad schools. I plan to go through this book rather quickly (~2 weeks) as I have a good grasp
         of mechanics, but I wish to be thorough (that is, do every problem in the book).
     </p>
 
     <h2>Thoughts</h2>
     <h3>Innovation Culture</h3>
+
+    <h2>Drawings</h2>
 
 </body>
 </html>
