--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Hello!</h1>
+
     <h2>Blog</h2>
     <p>This site will contain my writing and projects relating to my various interests: drawing, animation, physics, 
         math, programming, etc. I hope to write up a post every day. Please mind the formatting, I have yet to decide on 
@@ -14,7 +15,7 @@
     </p>
 
     <h3>11/8/24: Learning C++ by making a physics engine</h2>
-    <p>I was inspired to make an acoustic pressure hologram by this <a href="https://www.youtube.com/watch?v=hCC1C5KIeUA">video by Dan Foisy. Luckily, he 
+    <p>I was inspired to make an acoustic pressure hologram by this <a href="https://www.youtube.com/watch?v=hCC1C5KIeUA">video</a> by Dan Foisy. Luckily, he 
         had shared a git <a href="https://github.com/danfoisy/vdatp">repo</a> with his project designs, which I looked at to get my own simulation up and running.
         I also wanted to use this project as an opportunity to learn the widely used graphics library <a href="https://www.vulkan.org/">Vulkan</a>.
     </a> </p>
@@ -36,8 +37,9 @@
     <h4>Exploring the animation pipeline</h4>
     <p>USD, Hydra, etc... </p>
 
+    <hr>
 
-    <h3>Projects</h3>
+    <h2>Projects</h2>
     <h3>Acoustic Pressure physics engine</h3>
     <h3>MEEP simulations - evolutionary antenna design</h3>
     <h3>Automatically generated AMVs</h3>
@@ -48,17 +50,27 @@
 
     <h3></h3>
 
+    <hr>
+
     <h2>Book Reviews</h2>
     <h3>Landau: Mechanics</h3>
     <p>I am starting my quest to complete Landau's "theoretical minimum" in the hopes of making sure I have sufficient breadth of knowlege to
         start physics research and start applying to grad schools. I plan to go through this book rather quickly (~2 weeks) as I have a good grasp
         of mechanics, but I wish to be thorough (that is, do every problem in the book). 
     </p>
+    <h5>Ch 1</h5>
+    <p></p>
+
+    <h3>The Rise of Theodore Roosevelt by Edmund Morris</h3>
+    <p>...</p>
+
+    <hr>
 
     <h2>Thoughts</h2>
     <h3>Innovation Culture</h3>
     <p>How companies kill their innovation. Not all companies make money from innovation.</p>
 
+    <hr>
     <h2>Drawings</h2>
 
     <h3>11/8/24</h3>
