added mathjax via cdn

--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ayan Sarma</title>
+    <script type="text/x-mathjax-config">
+        MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}});
+    </script>
+    <script type="text/javascript" async
+        src="https://example.com/mathjax/MathJax.js?config=TeX-AMS_CHTML">
+    </script>
 </head>
 <body>
     <h1>Hello!</h1>
@@ -27,8 +33,23 @@
         used to deal with the video editing.
     </p>
 
-    <h3>Geometric Langlands + Monstrous Moonshine</h3>
-    <p><a>Expository paper here</a></p>
+    <hr>
+    <h2>Math</h2>
+    <h3>Books I'm digesting</h3>
+    <ul>
+        <li>Topology, geometry and gauge fields: Foundations - Naber</li>
+        <li>Mathematical gauge theory - Hamilton</li>
+    </ul>
+    <hr>
+    <h2>Physics</h2>
+    When $a \ne 0$, there are two solutions to \(ax^2 + bx + c = 0\) and they are
+    $$x = {-b \pm \sqrt{b^2-4ac} \over 2a}.$$
+    <h3></h3>
+    
+
+    <hr>
+
+    <h3></h3>
 
     <h3>Testing out Moonray... Dreamworks ray-tracing renderer</h3>
     <p>I've loved the How To Train Your Dragon series, and have marvelled at the stunning way light was incorporated into the movies (see <a href="https://www.youtube.com/watch?v=awuqJuO5WOc">Toothless in Cave</a>). I've
@@ -72,8 +93,16 @@
 
     <hr>
     <h2>Drawings</h2>
+    <p>Goal is to draw every day in 2025!</p>
 
     <h3>11/8/24</h3>
+    <hr>
+    <h2>Languages</h2>
+    <h4>Hindi</h4>
+    <h4>Japanese</h4>
+    <h4>Spanish</h4>
+    <h4>French</h4>
+
 
 </body>
 </html>
