--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <h1>Hello!</h1>
+    <a href="/about/">About</a>
 
     <h2>Blog</h2>
     <p>This site will contain my writing and projects relating to my various interests: drawing, animation, physics, 
