changed language section

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
     <h3>11/8/24</h3>
     <hr>
-    <h2>Languages</h2>
+    <h2>Languages I want to learn</h2>
     <h4>Hindi</h4>
     <h4>Japanese</h4>
     <h4>Spanish</h4>
