--- a/index.html
+++ b/index.html
@@ -77,11 +77,12 @@
 
     <h2>Book Reviews</h2>
     <h3>Landau: Mechanics</h3>
-    <p>I am starting my quest to complete Landau's "theoretical minimum" in the hopes of making sure I have sufficient breadth of knowlege to
+    <p>I am starting my journey to complete Landau's "theoretical minimum" in the hopes of making sure I have sufficient breadth of knowlege to
         start physics research and start applying to grad schools. I plan to go through this book rather quickly (~2 weeks) as I have a good grasp
         of mechanics, but I wish to be thorough (that is, do every problem in the book). 
     </p>
-    <h5>Ch 1</h5>
+    <h3>Computer Systems: A Programmer's Perspective</h3>
+    <h3>Structure and Interpretation of Computer Programs</h3>
     <p></p>
 
     <h3>The Rise of Theodore Roosevelt by Edmund Morris</h3>
@@ -91,7 +92,7 @@
 
     <h2>Thoughts</h2>
     <h3>Innovation Culture</h3>
-    <p>How companies kill their innovation. Not all companies make money from innovation.</p>
+    <p><a href="/posts/InnovationCulture.html">How companies kill their innovation</a></p>
 
     <hr>
     <h2>Drawings</h2>
