--- a/index.html
+++ b/index.html
@@ -88,6 +88,10 @@
     <h3>The Rise of Theodore Roosevelt by Edmund Morris</h3>
     <p>...</p>
 
+    <h3>Building Embedded Systems - Changyi Gu</h3>
+    <h3>Startup Boards - Brad Feld</h3>
+    <h3>Venture Deals - Brad Feld</h3>
+
     <hr>
 
     <h2>Thoughts</h2>
