--- a/about/index.html
+++ b/about/index.html
@@ -6,9 +6,11 @@
     <title>Ayan Sarma</title>
 </head>
 <body>
-    Email:
+    Email: ayan@sarmacomputing.com
     Phone:
-    Affilliations:
+    Affilliations: University of Minnesota, Alumni, Dep of Math, Dep of physics
+    CV:
+    
     
 </body>
 </html>
