--- a/index.html
+++ b/index.html
@@ -7,13 +7,22 @@
     <script type="text/javascript" async
         src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/MathJax.js?config=TeX-MML-AM_CHTML">
     </script>
+    <script src="https://unpkg.com/hyperscript.org@0.9.14"></script>
 </head>
 <body>
+    <nav>
+        <a href="/about/">About</a>
+        <p>Email: <a href="mailto:ayan@sarmacomputing.com">ayan@sarmacomputing.com</a></p>
+        <a href="/code/">Programming</a>
+    </nav>
+
     <h1>Hello!</h1>
-    <a href="/about/">About</a>
-    <p>Email: <a href="mailto:ayan@sarmacomputing.com">ayan@sarmacomputing.com</a></p>
-    <p></p>
-    <a href="/code/">Programming</a>
+    
+    <button _="on click toggle .red on me">
+        Click Me
+    </button>
+      
+
 
     <h2>Blog</h2>
     <p>This site will contain my writing and projects relating to my various interests: drawing, animation, physics, 
@@ -52,6 +61,9 @@
     <hr>
 
     <h2>Projects</h2>
+
+    <h3>Realtime billionaire wealth tracker</h3>
+    <p>A website that helps visualize the wealth of the elite: whoisricher.com</p>
 
     <h2>Atmospheric Ion Propulsion on Venus</h2>
     <p>Ion propulsion is a widely used technology in space travel. NASA uses Xenon in its aircraft</p>
