--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
         <a href="/about/">About</a>
         <p>Email: <a href="mailto:ayan@sarmacomputing.com">ayan@sarmacomputing.com</a></p>
         <a href="/blog/">Blog</a>
+        <a href=""></a>
     </nav>
 
-    <h1>Hello! Welcome to my personal website. Build <a href="/blog">minimally</a> with html, picocss, and hyperscript</h1>
+    <p>Hello! Welcome to my personal website. Build <a href="/blog/">minimally</a> with html, picocss, and hyperscript</p>
     
     <button _="on every click set x to 10 then log x">Click Me</button>
     <button style="transition: all 800ms ease-in"
