added about section

--- a/about/index.html
+++ b/about/index.html
@@ -6,10 +6,11 @@
     <title>Ayan Sarma</title>
 </head>
 <body>
-    Email: ayan@sarmacomputing.com
-    Phone:
-    Affilliations: University of Minnesota, Alumni, Dep of Math, Dep of physics
-    CV:
+    <h3>Email</h3>
+    <p> <a href="mailto:ayan@sarmacomputing.com"> ayan@sarmacomputing.com</a> </p>
+    <h3>Affiliations</h3>
+    <p>University of Minnesota, Alumni</p>>
+    <h3>Resume</h3>
     
     
 </body>
