--- a/about/index.html
+++ b/about/index.html
@@ -4,13 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ayan Sarma</title>
+    <script src="https://unpkg.com/hyperscript.org@0.9.14"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css">
+    <style>
+        .dark {background-color: gray}
+    </style>
 </head>
 <body>
     <h3>Email</h3>
-    <p> <a href="mailto:ayan@sarmacomputing.com"> ayan@sarmacomputing.com</a> </p>
+    <p><a href="mailto:ayan@sarmacomputing.com"> ayan@sarmacomputing.com </a></p>
     <h3>Affiliations</h3>
-    <p>University of Minnesota, Alumni</p>>
-    <h3>Resume</h3>
+    <p>University of Minnesota (Sep 2020 - May 2024)</p>>
+    <p>Cyclikal, LLC (Mar 2024 - Mar 2025)</p>
+    <h3><a href="https://www.linkedin.com/in/ayan-sarma-701b6b180/">Linkedin</a></h3>
+    <h3><a href="https://github.com/quantum-traveler">Github</a></h3>
+    <h3><a href=""> Resume </a></h3>
+    <h3><a href="">Youtube</a></h3>
     
     
 </body>
