--- a/books/index.html
+++ b/books/index.html
@@ -3,9 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Ayan Sarma</title>
+    <script src="https://unpkg.com/hyperscript.org@0.9.14"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css">
+    <style>
+        .dark {background-color: gray}
+    </style>
+
 </head>
 <body>
-    
+    <h2>Math books</h2>
+    <p>List of books:</p>
+    <h2>Physics books</h2>
+    <p>List of books: </p>
 </body>
 </html>
