added blog posts

--- a/books/index.html
+++ b/books/index.html
@@ -16,5 +16,7 @@
     <p>List of books:</p>
     <h2>Physics books</h2>
     <p>List of books: </p>
+    <h2>Computer Science books</h2>
+    <p>List of books:</p>
 </body>
 </html>
