added erlang section

--- a/about/index.html
+++ b/about/index.html
@@ -21,6 +21,8 @@
     <h3><a href=""> Resume </a></h3>
     <h3><a href="">Youtube</a></h3>
     
-    
+    <h2>Projects</h2>
+    <h4>BEAM-brain</h4>
+    <p>LLM tuning using Erlang</p>
 </body>
 </html>
