changed landing page

--- a/index.html
+++ b/index.html
@@ -12,15 +12,12 @@
 
 </head>
 <body>
-    <nav>
-        <a href="/about/">About</a>
-    </nav>
-
-    <p>Hello! Welcome to my personal website. Build <a href="/blog/simplesoftware.html">minimally</a> with html, picocss, and hyperscript</p>
+    <h2>Welcome!</h2>
+    <p>You've landed on my personal website. Build <a href="/blog/simplesoftware.html">minimally</a> with html, picocss, and hyperscript</p>
     
+    <h3><a href="/about/">About</a></h3>
     <h3><a href="/blog/index.html">My blog</a></h3>
 
-    <h5><a href="/blog/erlang/index.html">Adventures in Erlang</a></h5>
 
 </body>
 </html>
