--- a/about/index.html
+++ b/about/index.html
@@ -20,9 +20,10 @@
     <h3><a href="https://github.com/quantum-traveler">Github</a></h3>
     <h3><a href=""> Resume </a></h3>
     <h3><a href="">Youtube</a></h3>
-    
+
     <h2>Projects</h2>
-    <h4>BEAM-brain</h4>
-    <p>LLM tuning using Erlang</p>
+    <h4>BEAM-brain: LLM tuning with Erlang</h4>
+    <p>Smart Mirror</p>
+    <p></p>
 </body>
 </html>
