--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <h2>Welcome!</h2>
     <p>You've landed on my personal website. Build <a href="/blog/simplesoftware.html">minimally</a> with html, picocss, and hyperscript</p>
-    <img src="/assets/babyme.jpeg" alt="Me in kindergarden!" width="400" height="500">>
+    <img src="/assets/babyme.jpeg" alt="Me in kindergarden!" width="200" height="250">
     <h3><a href="/about/">About</a></h3>
     <h3><a href="/blog/index.html">My blog</a></h3>
 
